# habitat_class

./: .gitignore  README.md  README_is.md  api.py  approach  coderes.txt  model.py  predict.py  predict_random_forest.py  predict_xgboost.py  predict_xgboost_ensemble.py  pyproject.toml  requirements.txt  train.py  train_habitat_resnet18.py  train_ir_resnet18.py  train_random_forest.py  train_xgboost.py  tune_xgboost.py  utils.py
experiments/resnet18_old/: loss_curve.csv  train_habitat_resnet18.py
